--- a/app/src/main/res/drawable/ic_like.xml
+++ b/app/src/main/res/drawable/ic_like.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/ic_heart_filled_24dp" />
-    <item android:state_active="true" android:drawable="@drawable/ic_heart_filled_24dp" />
+    <item android:state_activated="true" android:drawable="@drawable/ic_heart_filled_24dp" />
 
     <!-- DEFAULT STATE -->
     <item android:drawable="@drawable/ic_heart_outline_24dp" />
