--- a/app/src/main/res/drawable/ufi_save_icon.xml
+++ b/app/src/main/res/drawable/ufi_save_icon.xml
@@ -2,6 +2,8 @@
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/ufi_save_active" />
-    <item android:state_selected="true" android:drawable="@drawable/ufi_save_active" />
+    <item android:state_activated="true" android:drawable="@drawable/ufi_save_active" />
+
+    <!-- DEFAULT ITEM -->
     <item android:drawable="@drawable/ufi_save" />
 </selector>
